tests/paczka1/fuzzy1/52347346.err
Error in line 4: mDXmSyO0W S966 55,1
Error in line 6: S966 S298 69,0
Error in line 22: 3Zbi S966 61,3
Error in line 18: Azv7A93UP S966 37,6
Error in line 28: Azv7A93UP S298 99,1
Error in line 31: mDXmSyO0W S298 20,8
Error in line 32: mDXmSyO0W S966 42,8
Error in line 29: Azv7A93UP S966 87,6
Error in line 38: l4VtQOf9 A140 46,2
